--- a/Homework1/nbproject/private/private.properties
+++ b/Homework1/nbproject/private/private.properties
@@ -7,4 +7,5 @@ j2ee.server.middleware=C:/SO/glassfish6
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
+test.client.project=C:\\SO\\Practica1-SO\\Homework1
 user.properties.file=C:\\Users\\juanc\\AppData\\Roaming\\NetBeans\\18\\build.properties
