--- a/Homework1/nbproject/private/private.properties
+++ b/Homework1/nbproject/private/private.properties
@@ -1,11 +1,11 @@
-deploy.ant.properties.file=C:\\Users\\juanc\\AppData\\Roaming\\NetBeans\\18\\config\\GlassFishEE6\\Properties\\gfv3596273962.properties
+deploy.ant.properties.file=C:\\Users\\34622\\AppData\\Roaming\\NetBeans\\18\\config\\GlassFishEE6\\Properties\\gfv31549936414.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/SO/glassfish6/glassfish/domains/domain1
-j2ee.server.home=C:/SO/glassfish6/glassfish
-j2ee.server.instance=[C:\\SO\\glassfish6\\glassfish;C:\\SO\\glassfish6\\glassfish\\domains\\domain1]deployer:gfv610ee9:localhost:4848
-j2ee.server.middleware=C:/SO/glassfish6
+j2ee.server.domain=C:/glassfish6/glassfish/domains/domain1
+j2ee.server.home=C:/glassfish6/glassfish
+j2ee.server.instance=[C:\\glassfish6\\glassfish;C:\\glassfish6\\glassfish\\domains\\domain1]deployer:gfv610ee9:localhost:4848
+j2ee.server.middleware=C:/glassfish6
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
 test.client.project=C:\\SO\\Practica1-SO\\Homework1
-user.properties.file=C:\\Users\\juanc\\AppData\\Roaming\\NetBeans\\18\\build.properties
+user.properties.file=C:\\Users\\34622\\AppData\\Roaming\\NetBeans\\18\\build.properties
